--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>_rename</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="build/js/vendor.min.js"></script>
+    <link rel="stylesheet" href="build/css/master.css">
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
